--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
