--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^6.19.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
